# air_quality_api

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.debug.yml  docker-compose.yml  pyproject.toml  requirements.txt
app/: dependencies.py  main.py
app/db/: database_manager.py  parquet_handler.py
app/db/models/: air_quality.py
app/repositories/: air_quality_repository.py
app/routers/: air_quality.py
app/schemas/: air_quality.py  settings.py
app/services/: air_quality_service.py
app/utils/: arg_utils.py
notebooks/: data_exploration.ipynb  data_processing_pipeline.ipynb  data_utils.py  log_utils.py
notebooks/errors/: no_data_found_error.py
tests/: test_data_utils.py
