[tool.poetry]
name = "air-quality-api"
version = "0.1.0"
description = ""
authors = ["kenan hancer <kenanhancer@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.31.1"
pandas = "^2.2.3"
xarray = "^2024.9.0"
numpy = "^2.1.2"
sqlalchemy = "^2.0.35"
pydantic-settings = "^2.5.2"
gunicorn = "^23.0.0"
psycopg2 = "^2.9.9"
pyarrow = "^17.0.0"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.2.5"
ipykernel = "^6.29.5"
pytest = "^8.3.3"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
netcdf4 = "^1.7.1.post2"
fastparquet = "^2024.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
